<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <com.n.patterncall.preference.SetPatternPreference
        android:key="pref_key_set_pattern"
        android:persistent="false"
        android:title="@string/pref_title_set_pattern"/>

    <CheckBoxPreference
        android:key="pref_key_pattern_visible"
        android:defaultValue="true"
        android:dependency="pref_key_set_pattern"
        android:title="@string/pref_title_pattern_visible"
        android:summaryOn="@string/pref_summary_pattern_visible_on"
        android:summaryOff="@string/pref_summary_pattern_visible_off"/>

    <com.n.patterncall.preference.ClearPatternPreference
        android:dependency="pref_key_set_pattern"
        android:title="@string/pref_title_clear_pattern"
        android:dialogMessage="@string/pref_dialog_message_clear_pattern"/>
</PreferenceScreen>